# niosv-example-projects

./: LICENSE  README.md
1.niosv_soc_example/constraints/: pinning_de0nano_brd.tcl  timing_de0nano_brd.sdc
1.niosv_soc_example/ipblocks/: INT_CLKS_PLL.bsf  INT_CLKS_PLL.ppf  INT_CLKS_PLL.qip  INT_CLKS_PLL.v  INT_CLKS_PLL_bb.v  INT_CLKS_PLL_inst.v  INT_CLKS_PLL_syn.v
1.niosv_soc_example/qsys/: NIOSV_SOC.qsys  NIOSV_SOC.sopcinfo
1.niosv_soc_example/quartus/: niosv_soc_example.qpf  niosv_soc_example_jic_config.cof  niosv_soc_example_top.qsf
2.niosv_soc_sdram/constraints/: pinning_de0nano_brd.tcl.bak
2.niosv_soc_sdram/hdl/: niosv_soc_sdram_top.sv  niosv_soc_sdram_top.sv.bak
2.niosv_soc_sdram/qsys/: NIOSV_SOC.qsys  NIOSV_SOC.sopcinfo
2.niosv_soc_sdram/quartus/: niosv_soc_sdram.qpf  niosv_soc_sdram_top.ipregen.rpt  niosv_soc_sdram_top.qsf
3.niosv_soc_epcs_sdram/hdl/: niosv_soc_epcs_sdram_top.sv
3.niosv_soc_epcs_sdram/qsys/: NIOSV_SOC.qsys  NIOSV_SOC.sopcinfo
3.niosv_soc_epcs_sdram/quartus/: niosv_soc_epcs_sdram.qpf  niosv_soc_epcs_sdram_jic_config.cof  niosv_soc_epcs_sdram_top.ipregen.rpt  niosv_soc_epcs_sdram_top.qsf  niosv_soc_epcs_sdram_top.qws
4.niosv_soc_xip_epcs_sdram/hdl/: niosv_soc_xip_epcs_sdram_top.sv  niosv_soc_xip_epcs_sdram_top.sv.bak
4.niosv_soc_xip_epcs_sdram/qsys/: NIOSV_SOC.qsys  NIOSV_SOC.sopcinfo
4.niosv_soc_xip_epcs_sdram/quartus/: niosv_soc_epcs_sdram_jic_config.cof  (+2 more)
6.niosv_soc_epcs_sdram_freertos/software/freertos_app/: .cproject  CMakeLists.txt  JTAG UART Terminal.launch  freertos_app.hex  freertos_app.srec  main.c
(+4317 files in other folders)
